refactoring - no function changes